--- a/app/package.json
+++ b/app/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "aws s3 sync --delete ./dist s3://$S3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "aws-amplify": "^1.1.10",
     "aws-amplify-vue": "0.1.7",
-    "vue": "^2.5.22",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "vee-validate": "^2.1.3",
+    "vue": "^2.5.22",
     "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.4.1",
