--- a/app/package.json
+++ b/app/package.json
@@ -9,37 +9,37 @@
     "deploy": "aws s3 sync --delete ./dist s3://$S3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.1",
-    "aws-amplify": "^1.1.10",
+    "@babel/polyfill": "^7.10.4",
+    "aws-amplify": "^1.3.3",
     "aws-amplify-vue": "0.1.7",
-    "moment": "^2.24.0",
-    "vee-validate": "^2.1.3",
-    "vue": "^2.5.22",
-    "vue-lodash": "^2.0.0",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.4.1",
-    "vuex": "^3.0.1",
-    "vuex-persist": "^2.0.0"
+    "moment": "^2.27.0",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.11",
+    "vue-lodash": "^2.1.2",
+    "vue-router": "^3.3.4",
+    "vuetify": "^1.5.24",
+    "vuex": "^3.5.1",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.0.0",
-    "@vue/cli-plugin-unit-jest": "^3.0.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-pwa": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
     "flush-promises": "^1.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "style-resources-loader": "^1.2.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
+    "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-loader": "^15.4.2"
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
