--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "debug": "sam local start-api -d 5858  -n env.json",
     "start": "sam local start-api -n env.json",
-    "deploy": "sam package --template-file template.yaml --s3-bucket bucket-of-nitro --output-template-file packaged.yaml && sam deploy --template-file ./packaged.yaml --stack-name fayez-todo-ms-stack --capabilities CAPABILITY_IAM",
+    "deploy": "sam package --template-file template.yaml --s3-bucket $S3 --output-template-file packaged.yaml && sam deploy --template-file ./packaged.yaml --stack-name todo-ms-stack --capabilities CAPABILITY_IAM",
     "lint": "eslint .",
     "test": "jest",
     "watch": "jest --watchAll",
